--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server": "^2.16.0",
-    "graphql": "^15.3.0"
+    "graphql": "^15.3.0",
+    "mongodb": "^3.6.0"
   }
 }
